ServiceMesh (Istio)/sample-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-virtual-service
spec:
  hosts:
  - example.com
  http:
  - route:
    - destination:
        host: your-service.default.svc.cluster.local
        port:
          number: 8080
